--- a/aboutthenra.html
+++ b/aboutthenra.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <div class="share">
+     <a href="./homepage.html">Home Page</a>
+      <a href="./aboutthenra.html">About the NRA</a>
+      <a href="./donate.html">Donate</a>
+      <a href="./information.html">Information</a>
+    </div>
+    </head>
+  <body>
+    <h1>About the NRA, and the Mass Spreading of Guns</h1>
+    <div>
+    <span class="author">WRITEN BY: GRIFFIN JONES</span>
+    </div>
+      <div class="paragraph1">
+        <p>THE NRA (THE NATIONAL RIFLE ASSOSIATION) IS A BUSSNESS FED BY THE INGORANCE OF THE AMERICAN PEOPLE. THEY SPRED THEIR IDEAL FASTER THEN THE SPRED THEIR GUNS. THEY TELL AMERICANS THAT THEIR FREEDOM AND LIBERTY AND GUNS ARE CONNECTED. THAT TRYING TO TAKE AWAY GUNS IS LIKE TRYING TO TAKE AWAY THEIR FREEDOM AND LIBERTY.<br><br> IT SEEMS LIKE THE NRA WOULD BE LOSING MONEY BECAUSE OF THE RECENT SHOOTINGS, BUT IT'STHE COMPLETE OPPOSITE! THE NRA IS TELLING THIER MEMBERS TWO THINGS: THAT THE GOVERMENT IS OUT TO TAKE THEIR GUNS, SO THEY'D BETTER STOCK UP, AND THAT THE ONLY WAY TO PROTECT YOURSELF AND YOUR FAMILY FROM THESE SHOOTERS IS WITH GUNS. </p>
+    </div>
+    </body>
+  </html>
