--- a/donate.html
+++ b/donate.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE>
+<html>
+  <head>
+     <link href="style.css" type="text/css" rel="stylesheet">
+    <div class="share">
+      <a href="./homepage.html">Home Page</a> 
+    <a href="./aboutthenra.html">About the NRA</a> 
+      <a href="./donate.html">Donate</a>
+       <a href="./information.html">Information</a>
+    </div>
+    </head>
+  <body>
+<h1>Donate</h1>
+    </body>
+  </html>
