--- a/homepage.html
+++ b/homepage.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="style.css" type="text/css" rel="stylesheet">
+    <div class="share">
+     
+      <a href="./homepage.html">Home Page</a> 
+    <a href="./aboutthenra.html">About the NRA</a> 
+      <a href="./donate.html">Donate</a>
+       <a href="./information.html">Information</a>
+    
+      </div>
+      </head>    
+  <body>
+    <div class="start">
+      <div class="backgroundpic">
+    <h1>Gun Control</h1>
+      <h4>Help Fight the NRA</h4>
+      </div>
+      </div>
+  </body>
+  </html>
