--- a/aboutthenra.html
+++ b/aboutthenra.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" type="text/css" rel="stylesheet">
+     <link href="style.css" type="text/css" rel="stylesheet">
+     <h3 class="orange">F.F.O.S.</h3>
     <div class="share">
      <a href="./homepage.html">Home Page</a>
       <a href="./aboutthenra.html">About the NRA</a>
-      <a href="./donate.html">Donate</a>
-      <a href="./information.html">Information</a>
-    </div>
+      <a href="./donate.html">Help the Cause</a>
+      
+   </div>
     </head>
   <body>
     <h1>About the NRA, and the Mass Spreading of Guns</h1>
@@ -15,7 +16,12 @@
     <span class="author">WRITEN BY: GRIFFIN JONES</span>
     </div>
       <div class="paragraph1">
-        <p>THE NRA (THE NATIONAL RIFLE ASSOSIATION) IS A BUSSNESS FED BY THE INGORANCE OF THE AMERICAN PEOPLE. THEY SPRED THEIR IDEAL FASTER THEN THE SPRED THEIR GUNS. THEY TELL AMERICANS THAT THEIR FREEDOM AND LIBERTY AND GUNS ARE CONNECTED. THAT TRYING TO TAKE AWAY GUNS IS LIKE TRYING TO TAKE AWAY THEIR FREEDOM AND LIBERTY.<br><br> IT SEEMS LIKE THE NRA WOULD BE LOSING MONEY BECAUSE OF THE RECENT SHOOTINGS, BUT IT'STHE COMPLETE OPPOSITE! THE NRA IS TELLING THIER MEMBERS TWO THINGS: THAT THE GOVERMENT IS OUT TO TAKE THEIR GUNS, SO THEY'D BETTER STOCK UP, AND THAT THE ONLY WAY TO PROTECT YOURSELF AND YOUR FAMILY FROM THESE SHOOTERS IS WITH GUNS. </p>
+        <p>THE NRA (THE NATIONAL RIFLE ASSOCIATION) IS A BUISSNESS FED BY THE INGORANCE OF THE AMERICAN PEOPLE. THEY SPREAD THEIR IDEAS FASTER THEN THE SPREAD THEIR GUNS. THEY TELL AMERICANS THAT THEIR FREEDOM AND LIBERTY ARE CONNECTED TO THEIR GUNS. THE NRA IS TRYING TO MAKE TAKING AWAY GUNS LIKE TAKING AWAY THEIR FREEDOM AND LIBERTY.<br></p> 
+        <div class="image2">
+      <h3 class="caption">This is Wayne LaPierre, a formar president of the NRA, along with Donald Tump </h3>
+      </div>
+        <p><br> IT SEEMS LIKE THE NRA WOULD BE LOSING MONEY BECAUSE OF THE RECENT SHOOTINGS, BUT IT'S THE COMPLETE OPPOSITE! THE NRA IS TELLING THEIR MEMBERS TWO THINGS: THAT THE GOVERNMENT IS OUT TO TAKE THEIR GUNS, SO THEY'D BETTER STOCK UP, AND THAT THE ONLY WAY TO PROTECT YOURSELF AND YOUR FAMILY FROM THESE SHOOTERS IS WITH GUNS. </p>
     </div>
+   
     </body>
   </html>
