--- a/donate.html
+++ b/donate.html
@@ -2,14 +2,27 @@
 <html>
   <head>
      <link href="style.css" type="text/css" rel="stylesheet">
+     <h3 class="orange">F.F.O.S.</h3>
     <div class="share">
       <a href="./homepage.html">Home Page</a> 
     <a href="./aboutthenra.html">About the NRA</a> 
-      <a href="./donate.html">Donate</a>
-       <a href="./information.html">Information</a>
+      <a href="./donate.html">Help the Cause</a>
+      
     </div>
     </head>
   <body>
-<h1>Donate</h1>
+    <div>
+<h1>Help the Cause</h1>
+      <h3>How can you help stop these shootings?</h3>
+      </div>
+    <h4>Places to go to donate and learn</h4>
+    <ul>
+    <li><a href="https://marchforourlives.com/home/" target="_blank">March For Our Lives</a></li>
+      <br>
+    
+      <li><a href="https://www.csgv.org/" target="_blank">The Coalition to Stop Gun Violence</a></li>
+      <br>
+    <li><a href="https://everytown.org/" target="_blank">Everytown for Gun Safety</a></li>
+    </ul>
     </body>
   </html>
