--- a/aboutthenra.html
+++ b/aboutthenra.html
@@ -20,7 +20,7 @@
         <div class="image2">
       <h3 class="caption">This is Wayne LaPierre, a formar president of the NRA, along with Donald Tump </h3>
       </div>
-        <p><br> IT SEEMS LIKE THE NRA WOULD BE LOSING MONEY BECAUSE OF THE RECENT SHOOTINGS, BUT IT'S THE COMPLETE OPPOSITE! THE NRA IS TELLING THEIR MEMBERS TWO THINGS: THAT THE GOVERNMENT IS OUT TO TAKE THEIR GUNS, SO THEY'D BETTER STOCK UP, AND THAT THE ONLY WAY TO PROTECT YOURSELF AND YOUR FAMILY FROM THESE SHOOTERS IS WITH GUNS. </p>
+        <p><br> IT MAY SEEM LIKE THE NRA WOULD BE LOSING MONEY BECAUSE OF THE RECENT SHOOTINGS, BUT IT'S THE COMPLETE OPPOSITE! THE NRA IS TELLING THEIR MEMBERS TWO THINGS: THAT THE GOVERNMENT IS OUT TO TAKE THEIR GUNS, SO THEY'D BETTER STOCK UP, AND THAT THE ONLY WAY TO PROTECT YOURSELF AND YOUR FAMILY FROM THESE SHOOTERS IS WITH GUNS. </p>
     </div>
    
     </body>
