--- a/aboutthenra.html
+++ b/aboutthenra.html
@@ -4,7 +4,7 @@
      <link href="style.css" type="text/css" rel="stylesheet">
      <h3 class="orange">F.F.O.S.</h3>
     <div class="share">
-     <a href="./homepage.html">Home Page</a>
+     <a href="./index.html">Home Page</a>
       <a href="./aboutthenra.html">About the NRA</a>
       <a href="./donate.html">Help the Cause</a>
       
