--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
   <head>
+    <title>Help the Cause</title>
      <link href="style.css" type="text/css" rel="stylesheet">
      <h3 class="orange">F.F.O.S.</h3>
     <div class="share">
