--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <link href="style.css" type="text/css" rel="stylesheet">
     <h3 class="orange">F.F.O.S.</h3>
     <div class="share">
-      <a href="./index.html">Home Page</a> 
+      <a href="./homepage.html">Home Page</a> 
     <a href="./aboutthenra.html">About the NRA</a> 
       <a href="./donate.html">Help the Cause</a>
       
