--- a/goals.html
+++ b/goals.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <div class="share">
+      <a href="./homepage.html">Home Page</a> 
+    <a href="./aboutthenra.html">About the NRA</a> 
+      <a href="./donate.html">Help the Cause</a>
+        <a herf="./goals.html">My Goals</a>
 </head>
 </html>
