--- a/goals.html
+++ b/goals.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="style.css" type="text/css" rel="stylesheet">
     <div class="share">
       <a href="./homepage.html">Home Page</a> 
     <a href="./aboutthenra.html">About the NRA</a> 
       <a href="./donate.html">Help the Cause</a>
         <a herf="./goals.html">My Goals</a>
 </head>
+    <body>
+        <h1>My Goals<h1>
+            <h3>What are my goals for this website?><h3>
+        </body>
 </html>
