--- a/donate.html
+++ b/donate.html
@@ -8,7 +8,7 @@
       <a href="./homepage.html">Home Page</a> 
     <a href="./aboutthenra.html">About the NRA</a> 
       <a href="./donate.html">Help the Cause</a>
-      <a herf="./goals.html">My Goals</a>
+      <a href="./goals.html">My Goals</a>
       
     </div>
     </head>
