--- a/goals.html
+++ b/goals.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
-<head>
-    <link href="style.css" type="text/css" rel="stylesheet">
+  <head>
+    <title>Help the Cause</title>
+     <link href="style.css" type="text/css" rel="stylesheet">
+     <h3 class="orange">F.F.O.S.</h3>
     <div class="share">
       <a href="./homepage.html">Home Page</a> 
     <a href="./aboutthenra.html">About the NRA</a> 
       <a href="./donate.html">Help the Cause</a>
-        <a href="./goals.html">My Goals</a>
-</head>
-    <body>
-        <h1>My Goals<h1>
-            <h3>What are my goals for this website?><h3>
-        </body>
-</html>
+      <a href="./goals.html">My Goals</a>
+      
+    </div>
+    </head>
+  <body>
+<h1>MY Goals</h1>
+      <h3>What are my goals for this website?</h3>
+    </body>
+  </html>
