--- a/goals.html
+++ b/goals.html
@@ -15,5 +15,6 @@
   <body>
 <h1>MY Goals</h1>
       <h3>What are my goals for this website?</h3>
+    <p> My goals for this website is to give the people who are for gun control a place to learn more and dircet them to places they can donate. There are more American citizens for gun control than against, so why are shooters stll able to obtain guns like AR-15 legaly? The other goal for this website is to redirct people who are on the fence about gun control to other websites with powerful arguments. Lastly, I hope that this website can make a difference in the current fight for our safety.
     </body>
   </html>
