--- a/aboutthenra.html
+++ b/aboutthenra.html
@@ -18,11 +18,11 @@
     <span class="author">WRITEN BY: GRIFFIN JONES</span>
     </div>
       <div class="paragraph1">
-        <p>THE NRA (THE NATIONAL RIFLE ASSOCIATION) IS A BUISSNESS FED BY THE INGORANCE OF THE AMERICAN PEOPLE. THEY SPREAD THEIR IDEAS FASTER THEN THE SPREAD THEIR GUNS. THEY TELL AMERICANS THAT THEIR FREEDOM AND LIBERTY ARE CONNECTED TO THEIR GUNS. THE NRA IS TRYING TO MAKE TAKING AWAY GUNS LIKE TAKING AWAY THEIR FREEDOM AND LIBERTY.<br></p> 
+        <p>THE NRA (THE NATIONAL RIFLE ASSOCIATION) IS A BUISSNESS FED BY THE IGNORANCE OF THE AMERICAN PEOPLE. THEY SPREAD THEIR IDEAS FASTER THEN THE SPREAD THEIR GUNS. THEY TELL AMERICANS THAT THEIR FREEDOM AND LIBERTY ARE CONNECTED TO THEIR GUNS. THE NRA IS TRYING TO MAKE TAKING AWAY GUNS LIKE TAKING AWAY THEIR FREEDOM AND LIBERTY.<br></p> 
         <div class="image2">
       <h3 class="caption">This is Wayne LaPierre, a formar president of the NRA, along with Donald Tump </h3>
       </div>
-        <p><br> IT MAY SEEM LIKE THE NRA WOULD BE LOSING MONEY BECAUSE OF THE RECENT SHOOTINGS, BUT IT'S THE COMPLETE OPPOSITE! THE NRA IS TELLING THEIR MEMBERS TWO THINGS: THAT THE GOVERNMENT IS OUT TO TAKE THEIR GUNS, SO THEY'D BETTER STOCK UP, AND THAT THE ONLY WAY TO PROTECT YOURSELF AND YOUR FAMILY FROM THESE SHOOTERS IS WITH GUNS. </p>
+        <p><br> IT MAY SEEM LIKE THE NRA WOULD BE LOSING MONEY BECAUSE OF THE RECENT SHOOTINGS, BUT IT'S THE COMPLETE OPPOSITE! THE NRA IS TELLING THEIR MEMBERS TWO THINGS: THAT THE GOVERNMENT IS OUT TO TAKE THEIR FIREARMS, SO THEY'D BETTER STOCK UP, AND THAT THE ONLY WAY TO PROTECT YOURSELF AND YOUR FAMILY FROM THESE SHOOTERS IS WITH GUNS. </p>
     </div>
    
     </body>
