--- a/aboutthenra.html
+++ b/aboutthenra.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About the NRA</title>
+    <title>Niffirg.org</title>
      <link href="style.css" type="text/css" rel="stylesheet">
      <h3 class="orange">F.F.O.S.</h3>
     <div class="share">
