--- a/homepage.html
+++ b/homepage.html
@@ -14,7 +14,7 @@
     </head>
   <body>
     <div class="start">
-<h1>F.F.O.S.</h1>
+<h1>EAT FEET YEET</h1>
       </div>
     <h5>(Fight For Our Safty)</h5>
       <marquee behavior="scroll" direction="left" scrollamount="13">Join the Cause, Help Take Down the NRA!</marquee>
