--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <h1>ayyyyyy<h1>
-    </head>
+    <title>Homepage</title>
+    <h1>Niffirg</h1>
+    <head>
       <body>
-        </body>
+        <body>
 </html>
