--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Homepage</title>
+    <title<img src="https://i.ytimg.com/vi/SfLV8hD7zX4/maxresdefault.jpg">Homepage</title>
     <h1>Niffirg</h1>
     <head>
       <body>
