--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <h1>Niffirg</h1>
     <head>
       <body>
+        <img src="https://cdn.britannica.com/55/174255-004-9A4971E9.jpg">
         <body>
 </html>
