--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <h1>Niffirg</h1>
     <head>
       <body>
-        <img src="https://cdn.britannica.com/55/174255-004-9A4971E9.jpg">
+        <script>
+          cosole.log("Does this Work?")
+          </script>
         <body>
 </html>
