--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
       <body>
         <script>
-          cosole.log("Does this Work?")
+          prompt("what is your favorite color?")
           </script>
         <body>
 </html>
