--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <head>
       <body>
         <script>
-          prompt("what is your favorite color?")
-          </script>
+          var favColor = prompt("what is your favorite color?".toUppercase())          
+        if(favColor === "BLUE") {
+         <html>
+           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Solid_blue.svg/225px-Solid_blue.svg.png">
+          </html>
+        }else{ 
+         confirm("Blue is a better color") 
+        }
+        </script>
+        
         <body>
 </html>
