--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         <script>
           var favColor = prompt("what is your favorite color?".toUppercase())          
         if(favColor === "BLUE") {
-         <html>
-           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Solid_blue.svg/225px-Solid_blue.svg.png">
-          </html>
+        confirm("cool, blue's a good color")
         }else{ 
          confirm("Blue is a better color") 
         }
