--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
       <body>
         <script>
-          var favColor = prompt("what is your favorite color?".toUpperCase())          
+          var favColor = prompt("what is your favorite color?", "blue's a nice one").toUpperCase()          
         if(favColor === "BLUE") {
         confirm("cool, blue's a good color")
         }else{ 
