--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
          confirm("Blue is a better color") 
         }
         </script>
+        <python>
+          raw_imput("so does this work, or naw?")
+          </python>
         
         <body>
 </html>
