--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         </script>
         <python>
-          raw_imput("so does this work, or naw?")
+          raw_input("so does this work, or naw?")
           </python>
         
         <body>
