--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ if (randomNumber > 60) {
 } else {
   var computerChoice = ("Sissors")
 }
-var playerChoice = prompt("Choose what to play!", "Rock, Paper, or Sissors").toUpperCase
+var playerChoice = prompt("Choose what to play!", "Rock, Paper, or Sissors").toUpperCase();
 if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("It's a tie, you both chose rock!")
 } if (playerChoice === "ROCK" && computerChoice === "Paper") {
