--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <title>Homepage</title>
     <h1>Niffirg</h1>
     <head>
-      <body>
-        <script>
+      <body> <button onclick="RPS()">Play Rock, Paper, Sissors!</button>
+       <script>
+         function RPS() {
+                   <script>
           var randomNumber = (Math.floor(Math.random() * 90))
 if (randomNumber > 60) {
   var computerChoice = ("Rock")
@@ -36,6 +38,9 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("Sorry, that's not an option!")
 }
         </script>
+         }
+         </script>
+       
         
         <body>
 </html>
