--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <body> <button onclick="RPS()">Play Rock, Paper, Sissors!</button>
        <script>
          function RPS() {
-                   
+           var playerScore === 0
+           var computerScore === 0
           var randomNumber = (Math.floor(Math.random() * 90))
 if (randomNumber > 60) {
   var computerChoice = ("Rock")
@@ -20,22 +21,28 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("It's a tie, you both chose rock!")
 } if (playerChoice === "ROCK" && computerChoice === "Paper") {
   confirm("You lost, the computer chose paper!")
+  computerScore + 1
 } if (playerChoice === "ROCK" && computerChoice === "Sissors") {
   confirm("You won, The computer choose sissors!")
+  playerScore + 1
 } if (playerChoice === "PAPER" && computerChoice === "Rock") {
   confirm("You won, the computer chose rock!")
+  playerScore + 1
 } if (playerChoice === "PAPER" && computerChoice === "Paper") {
   confirm("It's a tie, you both chose paper!")
 } if (playerChoice === "PAPER" && computerChoice === "Sissors") {
   confirm("You lost, the computer chose sissors!")
+  computerScore + 1
 } if (playerChoice === "SISSORS" && computerChoice === "Rock") {
   confirm("You lost, the computer chose rock!")
+  computerScore + 1
 } if (playerChoice === "SISSORS" && computerChoice === "Paper") {
   confirm("You won, the computer chose paper!")
+  playerScore + 1
 } if (playerChoice === "SISSORS" && computerChoice === "Sissors") {
   confirm("It's a tie, you both picked sissors!")
 } else {
-  confirm("Sorry, that's not an option!")
+  confirm("The current score is " + computerScore + " computer vs " + playerScore + " player")
 }
         
          }
