--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Homepage</title>
     <h1>Niffirg</h1>
     <head>
-      <body> <button onclick="RPS()">Play Rock, Paper, Sissors!</button>
+      <body> <button onclick=RPS()>Play Rock, Paper, Sissors!</button>
        <script>
          function RPS() {
            var playerScore === 0
