--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <title>Homepage</title>
     <h1>Niffirg</h1>
     <head>
-      <body> <button onclick=RPS()>Play Rock, Paper, Sissors!</button>
+      <script>
+        var playerScore === 0
+           var computerScore === 0
+        </script>
+      <body> <button onclick="RPS()">Play Rock, Paper, Sissors!</button>
        <script>
          function RPS() {
-           var playerScore === 0
-           var computerScore === 0
+           
           var randomNumber = (Math.floor(Math.random() * 90))
 if (randomNumber > 60) {
   var computerChoice = ("Rock")
