--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
     <title>Homepage</title>
     <h1>Niffirg</h1>
     <head>
-      <script>
-        var playerScore === 0
-           var computerScore === 0
-        </script>
+      
       <body> <button onclick="RPS()">Play Rock, Paper, Sissors!</button>
        <script>
          function RPS() {
@@ -19,6 +16,8 @@ if (randomNumber > 60) {
 } else {
   var computerChoice = ("Sissors")
 }
+           var playerChoice = 0
+           var computerChoice = 0
 var playerChoice = prompt("Choose what to play!", "Rock, Paper, or Sissors").toUpperCase();
 if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("It's a tie, you both chose rock!")
