--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ if (randomNumber > 60) {
 } else {
   var computerChoice = ("Sissors")
 }
-           var playerChoice = 0
-           var computerChoice = 0
+           var playerScore = 0
+           var computerScore = 0
 var playerChoice = prompt("Choose what to play!", "Rock, Paper, or Sissors").toUpperCase();
 if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("It's a tie, you both chose rock!")
