--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("It's a tie, you both chose rock!")
 } if (playerChoice === "ROCK" && computerChoice === "Paper") {
   confirm("You lost, the computer chose paper!")
-  computerScore + 1
+  computerScore++ 
 } if (playerChoice === "ROCK" && computerChoice === "Sissors") {
   confirm("You won, The computer choose sissors!")
   playerScore + 1
