--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   computerScore++ 
 } if (playerChoice === "ROCK" && computerChoice === "Sissors") {
   confirm("You won, The computer choose sissors!")
-  playerScore + 1
+  playerScore++
 } if (playerChoice === "PAPER" && computerChoice === "Rock") {
   confirm("You won, the computer chose rock!")
-  playerScore + 1
+  playerScore++
 } if (playerChoice === "PAPER" && computerChoice === "Paper") {
   confirm("It's a tie, you both chose paper!")
 } if (playerChoice === "PAPER" && computerChoice === "Sissors") {
   confirm("You lost, the computer chose sissors!")
-  computerScore + 1
+  computerScore++
 } if (playerChoice === "SISSORS" && computerChoice === "Rock") {
   confirm("You lost, the computer chose rock!")
-  computerScore + 1
+  computerScore++
 } if (playerChoice === "SISSORS" && computerChoice === "Paper") {
   confirm("You won, the computer chose paper!")
-  playerScore + 1
+  playerScore++
 } if (playerChoice === "SISSORS" && computerChoice === "Sissors") {
   confirm("It's a tie, you both picked sissors!")
 } else {
