--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
           var randomNumber = (Math.floor(Math.random() * 90))
 if (randomNumber > 60) {
   var computerChoice = ("Rock")
+  confirm(randomNumber)
 } if (randomNumber > 30) {
   var computerChoice = ("Paper")
+  confirm(randomNumber)
 } else {
   var computerChoice = ("Sissors")
+  confirm(randomNumber)
 }
            
 var playerChoice = prompt("Choose what to play!", "Rock, Paper, or Sissors").toUpperCase();
