--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
       
       <body> <button onclick="RPS()">Play Rock, Paper, Sissors!</button>
+        <link href="style.css" type="text/css" rel="stylesheet">
        <script>
           var playerScore = 0
            var computerScore = 0
