--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <h1>Niffirg</h1>
     <head>
       
-      <body> <button onclick="RPS()">Play Rock, Paper, Sissors!</button>
+      <body> <button onclick="RPS()" class="gameButton">Play Rock, Paper, Sissors!</button>
         <link href="style.css" type="text/css" rel="stylesheet">
        <script>
           var playerScore = 0
