--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
 } if (playerChoice === "SISSORS" && computerChoice === "Sissors") {
   confirm("It's a tie, you both picked sissors!")
 } if(playerChoice === "END"){
-  playerScore + 5 
+  playerScore += 5 
 }else {
   confirm("The current score is " + computerScore + " (computer) vs " + playerScore + " (player) Get five points to win!")
 }
