--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("It's a tie, you both picked sissors!")
 } if(playerChoice === "END"){
   playerScore += 5 
+} if(playerChoice === "LOSE"){ 
+  computerScore += 5         
 }else {
   confirm("The current score is " + computerScore + " (computer) vs " + playerScore + " (player) Get five points to win!")
 }
