--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <head>
       
       <body>
-         <html>
+        <html>
+        <a href="./index.html">Home Page</a>
+  <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
+         
          <button onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
         <link href="style.css" type="text/css" rel="stylesheet">
          </html>
