--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        
+        </head>
 <html>
     <button onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
         <link href="style.css" type="text/css" rel="stylesheet">
