--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        
+        <title>Rock Paper Sissors</title>
         </head>
 <html>
     <button onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
