--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -2,7 +2,10 @@
     <head>
         <title>Rock Paper Sissors</title>
         </head>
+    <body>
 <html>
+     <a href="./index.html">Home Page</a>
+    <br>
     <button onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
         <link href="style.css" type="text/css" rel="stylesheet">
          </html>
@@ -63,7 +66,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
          </script>
   
         
-        <body>
+        </body>
 </html>
   
   
