--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <html>
        
   <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
-            <a href="./blackjack.html">Play Rock Paper Sissors!</a>
+            <a href="./blackjack.html">Play Black Jack!</a>
          
         <link href="style.css" type="text/css" rel="stylesheet">
         </html>
