--- a/blackjack.html
+++ b/blackjack.html
@@ -5,11 +5,13 @@
 
 </head>
 <body>
+  
+  <script>
 
 var playerCard1 = (Math.floor(Math.random() * 1))
 
-if (playerCard1 === 1){ <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Poker-sm-221-Ah.png">
-} if (playerCard1 === 2){
+if (playerCard1 === 1){ <html> <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Poker-sm-221-Ah.png">
+</html> } if (playerCard1 === 2){
 } if (playerCard1 === 3){
 } if (playerCard1 === 4){
 } if (playerCard1 === 5){
@@ -61,6 +63,6 @@ if (playerCard1 === 1){ <img src="https://upload.wikimedia.org/wikipedia/commons
 } if (playerCard1 === 51){
 } if (playerCard1 === 52){
 } 
-
+</script>
 </body>
 </html>
