--- a/blackjack.html
+++ b/blackjack.html
@@ -10,8 +10,8 @@
 
 var playerCard1 = (Math.floor(Math.random() * 1))
 
-if (playerCard1 === 1){ <html> <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Poker-sm-221-Ah.png">
-</html> } if (playerCard1 === 2){
+if (playerCard1 === 1){ show_image("https://upload.wikimedia.org/wikipedia/commons/d/d3/Poker-sm-221-Ah.png") 
+} if (playerCard1 === 2){
 } if (playerCard1 === 3){
 } if (playerCard1 === 4){
 } if (playerCard1 === 5){
