--- a/blackjack.html
+++ b/blackjack.html
@@ -6,7 +6,11 @@
 </head>
 <body>
   
+  <button onclick="BJ()" class="btn">Play Black Jack!</button>
+  
   <script>
+    
+    function BJ() {
 
 var playerCard1 = (Math.floor(Math.random() * 1))
 
@@ -63,6 +67,7 @@ if (playerCard1 === 1){ show_image("https://upload.wikimedia.org/wikipedia/commo
 } if (playerCard1 === 51){
 } if (playerCard1 === 52){
 } 
+    }
 </script>
 </body>
 </html>
