--- a/blackjack.html
+++ b/blackjack.html
@@ -7,6 +7,7 @@
 <body>
   
   <button onclick="BJ()" class="btn">Play Black Jack!</button>
+      <link href="style.css" type="text/css" rel="stylesheet">
   
   <script>
     
@@ -14,7 +15,7 @@
 
 var playerCard1 = (Math.floor(Math.random() * 1))
 
-if (playerCard1 === 1){ show_image("https://upload.wikimedia.org/wikipedia/commons/d/d3/Poker-sm-221-Ah.png") 
+if (playerCard1 === 1){ prompt("did this work?") confirm(playerCard1) show_image("https://upload.wikimedia.org/wikipedia/commons/d/d3/Poker-sm-221-Ah.png") 
 } if (playerCard1 === 2){
 } if (playerCard1 === 3){
 } if (playerCard1 === 4){
