--- a/blackjack.html
+++ b/blackjack.html
@@ -17,7 +17,7 @@ var playerCard1 = (Math.floor(Math.random() * 52))
 
 confirm(playerCard1)
 
-if (playerCard1 === 1){ 
+if (playerCard1 === 1){ show_image("https://upload.wikimedia.org/wikipedia/commons/d/d3/Poker-sm-221-Ah.png") 
 } if (playerCard1 === 2){
 } if (playerCard1 === 3){
 } if (playerCard1 === 4){
