--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
        
   <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
             <a href="./blackjack.html">Play Black Jack!</a>
+          <a href="./test.html">TEST AREA</a>
          
         <link href="style.css" type="text/css" rel="stylesheet">
         </html>
