--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -50,15 +50,16 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   playerScore++
 } if (playerChoice === "SISSORS" && computerChoice === "Sissors") {
   confirm("It's a tie, you both picked sissors!")
-} if(playerChoice === "END"){
-  playerScore += 5 
-} if(playerChoice === "LOSE"){ 
-  computerScore += 5         
-}else {
+} if (playerChoice === 4387) { 
+  confirm ('I\'m so gald you found this... here\'s something for you to try)
+    <html>
+           <button onclick="./secret.html" class="btn">Secret Button</button> 
+           </html>
+} else {
   confirm("The current score is " + computerScore + " (computer) vs " + playerScore + " (player) Get five points to win!")
 }
    if (playerScore === 5){
-   confirm("Congrats! You beat the computer!")
+   confirm("Congrats! You beat the computer! Try inspect element on this page...") console.log('You are either seeing this in the console, or checking the code, either way you found this... Try typing in the code: 4387, have fun.')
    }
    if (computerScore === 5) {
    confirm("The computer beat you...")        
