--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -49,7 +49,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
 } if (playerChoice === "SISSORS" && computerChoice === "Sissors") {
   confirm("It's a tie, you both picked sissors!")
 } if (playerChoice === 4387) { 
-  confirm ('I am so gald you found this... here is something for you to try)
+  confirm ('I am so gald you found this... here is something for you to try')
    </script>
            <html>
            <button onclick="./secret.html" class="btn">Secret Button</button> 
