--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -49,12 +49,12 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
 } if (playerChoice === "SISSORS" && computerChoice === "Sissors") {
   confirm("It's a tie, you both picked sissors!")
 } if (playerChoice === 4387) { 
-  confirm ('I am so gald you found this... here is something for you to try')
+  confirm ('I am so gald you found this! Here is something for you to try:')
 } else {
   confirm("The current score is " + computerScore + " (computer) vs " + playerScore + " (player) Get five points to win!")
 }
    if (playerScore === 5){
-   confirm("Congrats! You beat the computer! Try inspect element on this page...") console.log('You are either seeing this in the console, or checking the code, either way you found this... Try typing in the code: 4387, have fun.')
+   confirm("Congrats! You beat the computer! Try inspect element on this page.") console.log('You are either seeing this in the console, or checking the code, either way you found this. Try typing in the code: 4387, have fun.')
    }
    if (computerScore === 5) {
    confirm("The computer beat you...")        
