--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -48,7 +48,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   playerScore++
 } if (playerChoice === "SISSORS" && computerChoice === "Sissors") {
   confirm("It's a tie, you both picked sissors!")
-} if (playerChoice === 4387) { 
+} if (playerChoice === '4387') { 
   confirm ('I am so gald you found this! Here is something for you to try:')
 } else {
   confirm("The current score is " + computerScore + " (computer) vs " + playerScore + " (player) Get five points to win!")
