--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Rock Paper Sissors</title>
-    <button id="sbtn" onclick="secret()" class="btn">Play Rock, Paper, Sissors!</button>    
+    <button id="sbtn" onclick="secret()" class="btn"></button>    
     </head>
     <body>
 <html>
