--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -1,7 +1,6 @@
 <html>
     <head>
-        <title>Rock Paper Sissors</title>
-    <button id="sbtn" onclick="secret()" class="btn"></button>    
+        <title>Rock Paper Sissors</title>   
     </head>
     <body>
 <html>
@@ -69,7 +68,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
          
          </script>
   <html>
-       <button onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
+       <button id='sbtn' onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
         <link href="style.css" type="text/css" rel="stylesheet">
       </html>
         
