--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -68,7 +68,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
          
          </script>
   <html>
-       <button id='sbtn' onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
+       <button onclick="RPS()" class="btn">Play Rock, Paper, Sissors!</button>
         <link href="style.css" type="text/css" rel="stylesheet">
       </html>
         
