--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -4,8 +4,8 @@
     </head>
     <body>
 <html>
+    <button id='sbtn' class='sbtn'><button>
      <a href="./index.html">Home Page</a>
-    <link href="storage.html">
     <br>
     <br>
          </html>
