--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
             <a href="./blackjack.html">Play Black Jack!</a>
           <a href="./test.html">TEST AREA</a>
+          <a href="./game.html">Game</a>
          
         <link href="style.css" type="text/css" rel="stylesheet">
         </html>
