--- a/game.html
+++ b/game.html
@@ -3,5 +3,5 @@
 <title>Game</title>
  <a href="./index.html">Homepage</a>
 </head>
-<canvas id="canvas" width="500" height="500" style="backround:#19F5F9"></canvas> 
+<canvas id="canvas" width="500" height="500" style="background:#19F5F9"></canvas> 
 </html>
