--- a/game.html
+++ b/game.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <title>Game</title>
- <a href="./index.html">Homepage</a>
 </head>
-<canvas id="canvas" width="500" height="500" style="background:#19F5F9"></canvas> 
+ <a href="./index.html">Homepage</a>
+ <br>
+<canvas id="canvas" width="500" height="500" style="background:#19F5F9; text-align:center;"></canvas> 
 </html>
