--- a/game.html
+++ b/game.html
@@ -2,7 +2,16 @@
 <head>
 <title>Game</title>
 </head>
+ <body>
  <a href="./index.html">Homepage</a>
  <br>
-<canvas id="canvas" width="500" height="500" style="background:#19F5F9; text-align:center;"></canvas> 
+<canvas id="canvas" style="background:#19F5F9"></canvas> 
+<script>
+ var canvas = document.getElementById('canvas')
+ var innerWidth = 360;
+ var innerHeight = 620; 
+ canvas.width = innerWidth;
+ canvas.height = innerHeight;
+ </script>
+ </body>
 </html>
