--- a/game.html
+++ b/game.html
@@ -36,7 +36,7 @@
  };
  
  //ANIMATION LOOP
- function animate {
+ function animate() {
   requestAnimationFrame(animate);
   c.clearReact(0,0, canvas.width, canvas.height);
   player.draw();
