--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
  var player = {}
  var player_height = 100;
  var player_width = 100;
- var player_image = new image();
+ var player_image = new Image();
  player_image.src = 'https://www.clipartmax.com/png/middle/108-1089910_muffin-bakery-cupcake-clip-art-cartoon-muffin-png.png';
  
  //CREATE PLAYER
