--- a/game.html
+++ b/game.html
@@ -38,7 +38,7 @@
  //ANIMATION LOOP
  function animate() {
   requestAnimationFrame(animate);
-  c.clearReact(0,0, canvas.width, canvas.height);
+  c.clearRect(0,0, canvas.width, canvas.height);
   player.draw();
  };
  
