--- a/game.html
+++ b/game.html
@@ -5,13 +5,13 @@
  <body>
  <a href="./index.html">Homepage</a>
  <br>
-<canvas id="canvas" style="background:#19F5F9"></canvas> 
+<canvas id="canvas" style="background:#000"></canvas> 
 <script>
  
  //SET UP
  var canvas = document.getElementById('canvas')
  var c = canvas.getContext('2d');
- var innerWidth = 1350;
+ var innerWidth = 1400;
  var innerHeight = 775; 
  canvas.width = innerWidth;
  canvas.height = innerHeight;
