--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
  <body>
  <a href="./index.html">Homepage</a>
  <br>
-<canvas id="canvas" style="background:#000"></canvas> 
+<canvas id="canvas" style="background:#000 padding:20"></canvas> 
 <script>
  
  //SET UP
