--- a/game.html
+++ b/game.html
@@ -38,9 +38,10 @@
  
  document.onkeydown = function (event){
  
- if (event.KeyCode === 37) { player.x -= 5)
+ if (event.KeyCode === 37) { player.x -= 5}
   
-  
+ 
+                           
  }
  document.addEventListener('keyup', function (e){
  })
