--- a/game.html
+++ b/game.html
@@ -36,13 +36,13 @@
  
  //ARROW KEY EVENT LISTENER
  
- document.onkeydown = function (event){
+ document.addEventListener('keydown', function (event){
  
  if (event.KeyCode === 37) { player.x -= 5}
   
  
                            
- }
+ })
  document.addEventListener('keyup', function (e){
  })
 
