--- a/game.html
+++ b/game.html
@@ -37,7 +37,8 @@
  //ARROW KEY EVENT LISTENER
  
  document.addEventListener('keydown', function (event){
- 
+  
+ console.log(event.KeyCode);
  if (event.KeyCode === 37) { player.x -= 5}
   
  
