--- a/game.html
+++ b/game.html
@@ -38,8 +38,8 @@
  
  document.addEventListener('keydown', function (event){
   
- console.log(event.KeyCode);
- if (event.KeyCode === 37) { player.x -= 5}
+ console.log(event.keyCode);
+ if (event.keyCode === 37) { player.x -= 5}
   
  
                            
