--- a/game.html
+++ b/game.html
@@ -38,10 +38,10 @@
  
  document.addEventListener('keydown', function (event){
   
- console.log(event.keyCode);
  if (event.keyCode === 37) { player.x -= 5}
-  
- 
+ if (event.keyCode === 38) { player.y += 5} 
+ if (event.keyCode === 39) { player.x += 5} 
+ if (event.keyCode === 40) { player.y -= 5}
                            
  })
  document.addEventListener('keyup', function (e){
