--- a/game.html
+++ b/game.html
@@ -38,17 +38,16 @@
  
  document.addEventListener('keydown', function (event){
   
- event.keyCode = true
- //if (event.keyCode === 37) { player.x -= 10}
- //if (event.keyCode === 38) { player.y -= 10} 
- //if (event.keyCode === 39) { player.x += 10} 
- //if (event.keyCode === 40) { player.y += 10}
+ if (event.keyCode === 37) { player.x -= 10}
+ if (event.keyCode === 38) { player.y -= 10} 
+ if (event.keyCode === 39) { player.x += 10} 
+ if (event.keyCode === 40) { player.y += 10}
                            
  })
  
  document.addEventListener('keyup', function (event){
 
-event.keyCode = false
+
  
  })
  
