--- a/game.html
+++ b/game.html
@@ -15,6 +15,7 @@
  var innerHeight = 775; 
  canvas.width = innerWidth;
  canvas.height = innerHeight;
+ var keys = [];
  
  //PLAYER SET-UP
  var player = {}
@@ -36,20 +37,16 @@
  
  //ARROW KEY EVENT LISTENER
  
- document.addEventListener('keydown', function (event){
-  
- if (event.keyCode === 37) { player.x -= 10}
- if (event.keyCode === 38) { player.y -= 10} 
- if (event.keyCode === 39) { player.x += 10} 
- if (event.keyCode === 40) { player.y += 10}
-                           
- })
+ document.addEventListener('keydown', function (event){ keys[event.keyCode] = true; })
  
- document.addEventListener('keyup', function (event){
+ document.addEventListener('keyup', function (event){ keys[event.keyCode] = false; })
 
-
+if (keys && keys[37]) {player.x -= 5};
+if (keys && keys[38]) {player.y -= 5};
+if (keys && keys[39]) {player.x += 5};
+if (keys && keys[40]) {player.y += 5}; 
  
- })
+
  
  
  //ANIMATION LOOP
