--- a/game.html
+++ b/game.html
@@ -47,10 +47,10 @@
  }
  }
  
-if (gameArea.keys && gameArea.keys[37]) {player.x -= 5};
-if (gameArea.keys && gameArea.keys[38]) {player.y -= 5};
-if (gameArea.keys && gameArea.keys[39]) {player.x += 5};
-if (gameArea.keys && gameArea.keys[40]) {player.y += 5}; 
+if (myGameArea.keys && myGameArea.keys[37]) {player.x -= 5};
+if (myGameArea.keys && myGameArea.keys[38]) {player.y -= 5};
+if (myGameArea.keys && myGameArea.keys[39]) {player.x += 5};
+if (myGameArea.keys && myGameArea.keys[40]) {player.y += 5}; 
  
 
  
