--- a/game.html
+++ b/game.html
@@ -35,24 +35,23 @@
  }
  };
  
- //ARROW KEY EVENT LISTENER
- var myGameArea = {
- start: function() { 
+ //ARROW KEY EVENT LISTENER 
   
-  document.addEventListener('keydown', function (event) { 
-   myGameArea.keys = (myGameArea.keys || []);
-   keys[event.keyCode] = true; })
+  document.addEventListener('keydown', function (event) {
+  
+    if (event.keyCode === 37) {player.x -=5}
+    if (event.keyCode === 38) {player.y -=5}
+    if (event.keyCode === 39) {player.x +=5}
+    if (event.keyCode === 40) {player.y +=5}
+  
+  
+  
+  }) 
+   
+   
  
-  document.addEventListener('keyup', function (event) { keys[event.keyCode] = false; })
- }
- }
- console.log(myGameArea.keys)
-if (myGameArea.keys && myGameArea.keys[37]) {player.x -= 5};
-if (myGameArea.keys && myGameArea.keys[38]) {player.y -= 5};
-if (myGameArea.keys && myGameArea.keys[39]) {player.x += 5};
-if (myGameArea.keys && myGameArea.keys[40]) {player.y += 5}; 
+  document.addEventListener('keyup', function (event) {})
  
-
  
  
  //ANIMATION LOOP
