--- a/game.html
+++ b/game.html
@@ -40,7 +40,7 @@
   document.addEventListener('keydown', function (event) {
   
     if (event.keyCode === 37) {player.x -=5}
-    if (event.keyCode === 38) {player.y -=5}
+    if (event.keyCode === 38 && player.y === 0) {player.y -=5, player.x -=5, player.x -=5, player.x -=5, player.x -=5, player.x +=5, player.x +=5, player.x +=5, player.x +=5, player.x +=5}
     if (event.keyCode === 39) {player.x +=5}
     if (event.keyCode === 40) {player.y +=5}
   
