--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        
   <a href="./rockpapersissors.html">Play Rock Paper Sissors!</a>
           <a href="./test.html">TEST AREA</a>
-          <a href="./game.html">Game</a>
+          <a href="./axeKnight.html">Axe Knight</a>
          
         <link href="style.css" type="text/css" rel="stylesheet">
         </html>
