--- a/axeKnight.html
+++ b/axeKnight.html
@@ -67,7 +67,7 @@ contoller = {
  player.x_velocity -= 0.5;
  }
  
- if key_state === controller.right) {
+ if (key_state === controller.right) {
   player.y_velocity += 0.5;
  } 
  
