--- a/axeKnight.html
+++ b/axeKnight.html
@@ -90,7 +90,7 @@ if (player.y > 775 - 20 - 100) {
 }
 
 
-window.requestAnimationFrame('animation');
+window.requestAnimationFrame(animation);
  
  
   window.addEventListener('keydown', controller.keyListener);
