--- a/axeKnight.html
+++ b/axeKnight.html
@@ -39,7 +39,9 @@
  
  //CONTROLLER
 controller = {
- 
+  up: false,
+  left: false,
+   right: false, 
  keyListener: function(event) {
  
   key_state = (event.type == 'keydown')?true:false;
