--- a/axeKnight.html
+++ b/axeKnight.html
@@ -44,7 +44,7 @@ controller = {
    right: false, 
  keyListener: function(event) {
  
-  key_state = (event.type == 'keydown')?true:false;
+  var key_state = (event.type == 'keydown')?true:false;
  
   switch(event.keyCode) {
    case 37: controller.left = key_state;
