--- a/axeKnight.html
+++ b/axeKnight.html
@@ -49,7 +49,7 @@ controller = {
   switch(event.keyCode) {
    case 37: controller.left = key_state;
     break;
-   case 39: contoller.right = key_state;
+   case 39: controller.right = key_state;
     break;
    case 90: controller.up = key_state;
     break;
