--- a/axeKnight.html
+++ b/axeKnight.html
@@ -45,7 +45,7 @@ controller = {
  keyListener: function(event) {
  
   var key_state = (event.type == 'keydown')?true:false;
- 
+ console.log(event.keyCode)
   switch(event.keyCode) {
    case 37: controller.left = key_state;
     break;
