--- a/axeKnight.html
+++ b/axeKnight.html
@@ -47,6 +47,7 @@ controller = {
   var key_state = (event.type == 'keydown')?true:false;
 
 console.log(event.keyCode)
+  console.log(key_state)
 
   switch(event.keyCode) {
    case 37: controller.left = key_state;
